Added title on like button

--- a/app/templates/header-zoom.hbs
+++ b/app/templates/header-zoom.hbs
@@ -8,7 +8,7 @@
     {{#if admin}}&nbsp;: {{labels.addDescription}} {{/if}}
 {{/if}}
 </span>
-<span class="likes">
+<span class="likes" title="J'aime cette photo">
 {{#unlessequals item.likes '0'}}
     {{item.likes}}
 {{/unlessequals}}
