--- a/views/rss.twig
+++ b/views/rss.twig
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <rss version="2.0">
     <channel>
-        <title>Tan, Johan &amp; Evan</title>
+        <title>Tan, Johan, Evan &amp; Lyam</title>
         <link>http://life.jops-dev.com/rss</link>
         <description>Notre vie, nos photos.</description>
         <language>FR-fr</language>
         <pubDate>{{now}}</pubDate>
-        <copyright>Copyright 2011 JoPs</copyright>
+        <copyright>Copyright 2016 JoPs</copyright>
 {% for item in items %}
         <item>
             <title>{{item.description|default(item.file)}}</title>
