Fix manifest and icons

--- a/app/templates/header-zoom.hbs
+++ b/app/templates/header-zoom.hbs
@@ -1,5 +1,5 @@
 <a href="/" class="brand">
-    <img src="/img/logo_m.png" alt="Logo" />
+    <img src="/img/logo.png" alt="Logo" />
 </a>
 <span class="date">{{formatDate item.date labels.dateFormat}}</span>
 <span class="date short">{{formatDate item.date labels.shortDateFormat}}</span>
