--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -7,8 +7,8 @@
   <div class="filter">Filtrer...</div>
   <div class="extra">
     <p class="info">{{#[unlessequals] nbItems 0}}{{nbItems}} {{labels.picturesToComment}}{{/[unlessequals]}}</p>
-    <button class="icon" id="add-item" title="Ajout de photos"><i class="icon-plus"></i></button>
-    <button class="icon" id="notify" title="Notifier"><i class="icon-upload"></i></button>
+    <button class="icon" id="add-item" title="Se connecter"><i class="icon-login"></i></button>
+    {{#if admin}}<button class="icon" id="notify" title="Notifier"><i class="icon-notify"></i></button>{{/if}}
   </div>
 </div>
 <div class="side back">
