Adds Numa to RSS titles

--- a/views/rss-comment.twig
+++ b/views/rss-comment.twig
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <rss version="2.0">
     <channel>
-        <title>Tan, Johan, Evan &amp; Lyam</title>
+        <title>Tan, Johan, Evan, Lyam &amp; Numa</title>
         <link>http://life.jops-dev.com/rss</link>
         <description>Derniers commentaires</description>
         <language>FR-fr</language>
