--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -1,5 +1,17 @@
 .grid {
     display: grid;
-    flex-wrap: wrap;
-    width: 100vw;
+    grid-template-columns: repeat(5, 1fr);
+    width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+    .grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
