--- a/src/components/Picture.css
+++ b/src/components/Picture.css
@@ -1,6 +1,31 @@
 .picture {
-    background-color: coral;
-    height: 200px;
-    margin: 1rem;
-    width: 300px;
+    align-items: center;
+    display: flex;
+    height: calc(20vw - 1rem);
+    justify-content: center;
+    margin: 0.2rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.picture:first-child {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+    height: calc(40vw - 1.6rem);
+}
+
+.picture-landscape img {
+    height: 100%;
+}
+
+.picture-portrait img {
+    width: 100%;
+}
+
+.picture span {
+    bottom: 0;
+    color: #fff;
+    font-size: 1rem;
+    height: 1.5em;
+    position: absolute;
 }
