--- a/src/components/Picture.css
+++ b/src/components/Picture.css
@@ -1,7 +1,7 @@
 .picture {
     align-items: center;
     display: flex;
-    height: calc(20vw - 1rem);
+    height: calc((100 / var(--grid-column-count)) * 1vw - 1rem);
     justify-content: center;
     margin: 0.2rem;
     overflow: hidden;
@@ -9,9 +9,9 @@
 }
 
 .picture:first-child {
-    grid-column: 1 / 3;
-    grid-row: 1 / 3;
-    height: calc(40vw - 1.6rem);
+    grid-column: 1 / span var(--first-item-column-count);
+    grid-row: 1 / span var(--first-item-column-count);
+    height: calc((var(--first-item-column-count) * 100 / var(--grid-column-count)) * 1vw - 1.6rem);
 }
 
 .picture-landscape img {
@@ -22,10 +22,31 @@
     width: 100%;
 }
 
-.picture span {
-    bottom: 0;
+.picture .date, .picture .description {
+    background: rgba(0, 0, 0, 0.5);
     color: #fff;
-    font-size: 1rem;
-    height: 1.5em;
+    font-size: large;
+    margin: 0;
+    padding: 4px 0;
     position: absolute;
+    text-align: center;
+    visibility: hidden;
+    width: 100%;
+}
+
+.picture .date {
+    font-size: medium;
+    padding: 4px 5px;
+    left: 0;
+    top: 0;
+    width: auto;
+}
+
+.picture .description {
+    bottom: 0;
+    line-height: 1.5rem;
+}
+
+.picture:hover .date, .picture:hover .description {
+    visibility: visible;
 }
